Fix the bottom of the main menu unclickable on iPhones
close #41

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -952,7 +952,7 @@
     }
     .navigation .social
     {
-        height: 48px;
+        height: 200px;
         padding-top: 8px;
     }
 }
@@ -960,13 +960,12 @@
 {
     #block-system-main-menu .content ul a
     {
-        height: 38px;
+        height: 36px;
         font-size: 1em;
     }
     .navigation .social
     {
-        height: 46px;
-        padding-top: 6px;
+        padding-top: 5px;
         
         .content a
         {
